--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy-to-dev:
     name: "Deploy Helsemelding Kafka Manager to dev"
+    permissions:
+      id-token: 'write'
     runs-on: ubuntu-latest
     steps:
       - uses: "actions/checkout@v4"
