--- a/.nais/helsemelding-kafka-manager-dev.yaml
+++ b/.nais/helsemelding-kafka-manager-dev.yaml
@@ -56,6 +56,12 @@ spec:
               "location": "AIVEN",
               "keyDeserializerType": "STRING",
               "valueDeserializerType": "STRING"
+            },
+            {
+              "name": "helsemelding.dialog.status.json",
+              "location": "AIVEN",
+              "keyDeserializerType": "STRING",
+              "valueDeserializerType": "STRING"
             }
           ]
         }
